macros/src/async_generic_target/fn/snapshots/expand_async_change_signature1.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
fn foo() -> String {}
async fn foo_async() {}
