macros/src/async_generic_target/fn/snapshots/expand_async_condition.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
fn foo() {
    { 1 }
}
async fn foo_async() {
    { 0 }
}
