macros/src/async_generic_target/fn/snapshots/expand_async_condition_affects_inner_items.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
fn foo() {
    fn bar() {
        {
            let __value = 1;
            __value
        }
    }
}
async fn foo_async() {
    fn bar() {
        {
            let __value = 0;
            __value
        }
    }
}
