macros/src/async_generic_target/fn/snapshots/expand_async_default.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
/// # Common docs
fn foo() {}
/// # Common docs
/// # Async Docs
async fn foo_async() {}
