macros/src/async_generic_target/fn/snapshots/expand_async_interface_kind_async_fn.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted1
---
fn foo() {}
async fn foo_async() {}
