macros/src/async_generic_target/fn/snapshots/expand_async_interface_kind_impl_fut_body_with_await.snap
---
source: macros/src/async_generic_target/fn/mod.rs
expression: formatted
---
fn foo() {
    {
        1;
    }
}
fn foo_async() {
    async move {
        {
            0.await;
        }
    }
}
